veecle-osal-api/tests/ui/time_interval_tick_must_use.stderr
error: unused `Result` that must be used
 --> tests/ui/time_interval_tick_must_use.rs:6:5
  |
6 |     interval.tick().await;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this `Result` may be an `Err` variant, which should be handled
note: the lint level is defined here
 --> tests/ui/time_interval_tick_must_use.rs:1:9
  |
1 | #![deny(unused_must_use)]
  |         ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
  |
6 |     let _ = interval.tick().await;
  |     +++++++
